--- a/Samples/ConsoleAppSample/ConsoleAppSample.vcxproj
+++ b/Samples/ConsoleAppSample/ConsoleAppSample.vcxproj
@@ -112,7 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>..\..\libOxygen\out\build\x64-debug\libOxygen.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%OPENSSL64DIR%\lib\libCrypto_Static.lib;..\..\libOxygen\out\build\x64-debug\libOxygen.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
