--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,12 +1,16 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: CMake on a single platform
+name: Windows (libOxygen)
 
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'libOxygen/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'libOxygen/**'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -21,13 +25,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Install Full OpenSSL
+      run: choco install openssl
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -S ${{github.workspace}}/libOxygen -B ${{github.workspace}}/build -DLIBCRYPTO_HEADERS="C:\\\\Program Files\\\\OpenSSL-Win64\\\\include" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -S ${{github.workspace}}\libOxygen -B ${{github.workspace}}\build -DLIBCRYPTO_HEADERS="C:\Program Files\OpenSSL-Win64\include" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}\build --config ${{env.BUILD_TYPE}}
 
