Samples: Scripting work

--- a/Samples/DemonEnvelope/Source/CMakeLists.txt
+++ b/Samples/DemonEnvelope/Source/CMakeLists.txt
@@ -30,6 +30,7 @@ set (IMGUI_SOURCES
 
 set (SUN_SOURCES
     "../../Thirdparty/SunScript/SunScript.cpp"
+    "../../Thirdparty/SunScript/Sun.cpp"
     "../../Thirdparty/SunScript/SunScriptDemo.cpp"
 )
 
