--- a/Samples/DemonEnvelope/Source/CMakeLists.txt
+++ b/Samples/DemonEnvelope/Source/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable (DemonEnvelope
  "Network.h"
  "GameApplication.cpp"
  "GameApplication.h"
- "Editor.h" "Editor.cpp" "Render.h" "Render.cpp" "Level.cpp" "Level.h" "Tilemap.cpp" "Tilemap.h" "Tileset.cpp" "Tileset.h" "ObjectStream.cpp" "ObjectStream.h" "EventStream.cpp" "EventStream.h" "ConfigReader.cpp" "ConfigReader.h" "Scripting.cpp" "Scripting.h" "ScriptingEditor.cpp" "ScriptingEditor.h"   "Asset.h" "Game.h" "Game.cpp" "SpriteBatch.h" "SpriteBatch.cpp" "Party.cpp" "Party.h" "Item.cpp" "Item.h")
+ "Editor.h" "Editor.cpp" "Render.h" "Render.cpp" "Level.cpp" "Level.h" "Tilemap.cpp" "Tilemap.h" "Tileset.cpp" "Tileset.h" "ObjectStream.cpp" "ObjectStream.h" "EventStream.cpp" "EventStream.h" "ConfigReader.cpp" "ConfigReader.h" "Scripting.cpp" "Scripting.h" "ScriptingEditor.cpp" "ScriptingEditor.h"   "Asset.h" "Game.h" "Game.cpp" "SpriteBatch.h" "SpriteBatch.cpp" "Party.cpp" "Party.h" "Item.cpp" "Item.h" "Level_Entity.h" "Level_Entity.cpp")
 target_link_libraries(DemonEnvelope debug ${OXYGEN_LIBS}\\x64-debug\\libOxygen.lib)
 target_link_libraries(DemonEnvelope debug ${LIBCRYPTO}\\libcrypto_static.lib)
 
